[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "muscles-asgi"
version = "0.0.3"
description = ""
authors = ["Denis B. <denis@butko.info>"]
packages = [{include = "muscles", from = "src", to = "muscles.asgi"}]


[tool.poetry.dependencies]
python = "^3.9"
#muscles = {develop = true, version = "^0.0.2", path = "../muscles"}
watchdog = "^4.0.0"
jinja2 = "==3.1.2"
jsonschema = "==4.16.0"
python-magic = "==0.4.27"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
dnspython = "==2.6.1"
pytest = "==7.1.3"
setuptools = "==69.0.2"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"


[tool.poetry.dev-dependencies]
# Зависимости для разработки
